# dream_templaters_comparison

./: .gitignore  README.md  comparison.opam  dune  dune-project  lib.ml  stress.ml  test.sh
dream_eml/: bin.ml  cover_test.ml  dune  help.ml  lib.eml  stress_test.ml
dream_html/: bin.ml  cover_test.ml  dune  lib.ml  stress_test.ml
graphs/: perfomance.ipynb
lib/: common_test.ml  common_test_template.html  dhtml.ml  dune  ehtml.eml  problem.txt  thtml.ml  thtml_percent.ml  xhtml.mlx
mlx/: bin.mlx  cover_test.ml  dune  lib.mlx  stress_test.ml
test/cover_tests/: dhtml.ml  dhtml_test.ml  dune  ehtml.ml  ehtml_test.ml  thtml.ml  thtml_percent_test.ml  thtml_test.ml  xhtml.ml  xhtml_test.t
tyxml/: bin.ml  cover_test.ml  dune  lib.ml  stress_test.ml
tyxml_percent/: bin.ml  cover_test.ml  dune  lib.ml  stress_test.ml
