(executable
 (public_name ebin)
 (name bin)
 (modules bin)
 (libraries dream ehtml))

(executable
 (public_name help)
 (name help)
 (modules help)
 (libraries dream ehtml))

(library
 (name ehtml)
 (modules lib)
 (libraries dream)
 (instrumentation (backend bisect_ppx)))

(test 
 (name cover_test)
 (modules cover_test)
 (libraries ehtml))

(test 
 (name stress_test)
 (modules stress_test)
 (libraries ehtml))
