(library
 (modules dhtml)
 (name dhtml)
 (libraries dream-html)
 (instrumentation (backend bisect_ppx)))

(library
 (modules ehtml)
 (name ehtml)
 (libraries dream)
 (instrumentation (backend bisect_ppx)))

(rule
 (targets ehtml.ml)
 (deps ehtml.eml.ml)
 (action (run dream_eml %{deps})))

(library
 (modules thtml)
 (name thtml)
 (libraries tyxml)
 (instrumentation (backend bisect_ppx)))

(library
 (modules thtml_percent)
 (name thtml_percent)
 (libraries tyxml)
 (preprocess (pps tyxml-ppx))
 (instrumentation (backend bisect_ppx)))

(library
 (modules xhtml)
 (name xhtml)
 (libraries html_of_jsx)
 (preprocess (pps html_of_jsx.ppx))
 (instrumentation (backend bisect_ppx)))

(library
 (modules common_test)
 (name common_test))
