(test
 (libraries
  dhtml
  common_test)
 (name dhtml_test)
 (modules dhtml_test))

(test
 (libraries
  ehtml
  common_test)
  (name ehtml_test)
  (modules ehtml_test))

(test
 (libraries
  tyxml
  thtml
  common_test)
  (name thtml_test)
 (modules thtml_test))

(test
 (libraries
  thtml_percent
  common_test)
  (name thtml_percent_test)
 (modules thtml_percent_test))

(test
 (libraries xhtml)
 (name xhtml_test)
 (modules xhtml_test))
