(test
 (libraries
  dhtml)
 (name dhtml)
 (modules dhtml))

(test
 (libraries
  ehtml)
  (name ehtml)
  (modules ehtml))

(test
 (libraries
  tyxml
  thtml)
  (name thtml)
 (modules thtml))

(test
 (libraries
  thtml_percent)
  (name thtml_percent)
 (modules thtml_percent))

(test
 (libraries xhtml)
 (name xhtml)
 (modules xhtml))
